# far-control-frontend

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  build-and-copy-into-novaview.sh  build.sh  emacs=build-cmd  palette.txt  validate-e32-comms.grc
.cargo/: config.toml
gnuradio/: NRF24-demodulator.grc  validate-nrfcomms.grc
scripts/: pyproject.toml  simple-client.py
src/: args.rs  common.rs  connection.rs  consort.rs  e32linux.rs  ebyte.rs  ebytemock.rs  ignition_statemachine.rs  input.rs  layout.rs  lib.rs  main.rs  model.rs  observables.rs  recorder.rs  render.rs  rqp.rs  rqparser.rs  rqprotocol.rs  state.rs  telemetry.rs  visualisation.rs
src/observables/: mod.rs  rqa.rs  rqb.rs
src/render/: launch_control.rs  mod.rs  rf_silence.rs  rqa.rs  rqb.rs
src/rqparser/: mod.rs  rqa.rs  rqb.rs
src/telemetry/: mod.rs  nrf.rs  zmq.rs
src/telemetry/parser/: mod.rs  rq2.rs
