[package]
name = "control-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version="0.21" }#, path="/Users/deets/software/vc/egui/crates/egui" }
egui_sdl2_platform = { version="0.2.2", path="./modules/egui_sdl2_platform" }
gl = "*"
egui_glow = "0.21"
#egui_glow = { version="0.21", path="/Users/deets/software/vc/egui/crates/egui_glow" }
pollster = "0.2"
anyhow = "1.0"
ebyte-e32 = { version = "0.9.0", features = ["value_enum"] }
ebyte-e32-ftdi = { path = "./modules/ebyte-e32-ftdi" }
embedded-hal = "0.2.7"
serial = "0.4.0"
serial-core = "0.4.0"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.11"

ringbuffer = "0.15.0"
nom = "7.1.3"

[dev-dependencies]
mock_instant = "0.3.1"

