[package]
name = "control-frontend"
description = "Launch Control via E32 LoRa Module"
version = "0.1.0"
edition = "2021"
default-run = "launch-control"

[features]
default = ["e32", "novaview"]
e32 = ["dep:ebyte-e32", "dep:ebyte-e32-ftdi"]
novaview = ["dep:egui_sdl2_platform", "dep:linux-embedded-hal"]
eframe = ["dep:eframe"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version="0.21" }#, path="/Users/deets/software/vc/egui/crates/egui" }
egui_sdl2_platform = { version="0.2.2", path="./modules/egui_sdl2_platform", optional=true }
eframe = { version="0.21", optional=true}

gl = "*"
egui_glow = "0.21"
emath = "0.21"
epaint = "0.21"
#egui_glow = { version="0.21", path="/Users/deets/software/vc/egui/crates/egui_glow" }
pollster = "0.2"
anyhow = "1.0"
ebyte-e32 = { version = "0.9.0", features = ["value_enum"], optional=true }
ebyte-e32-ftdi = { path = "./modules/ebyte-e32-ftdi", optional=true }
embedded-hal = "0.2.7"
serial = "0.4.0"
serial-core = "0.4.0"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.11"
nb = "1.0.0"
palette = "0.5.0"
ringbuffer = "0.15.0"
nom = "7.1.3"
log = "0.4.20"
simple_logger = "4.3.3"
uom = "0.35.0"
memoize = "0.4.2"
serialport = "4.3.0"
linux-embedded-hal = { version = "0.4", features = ["gpio_cdev"], optional=true }

[dev-dependencies]
mock_instant = "0.3.1"


[package.metadata.bundle.bin.launch-control]
name = "Launch Control"
identifier = "de.alternative-raumfahrt.LaunchControl"

